src/main/java/com/example/demo/error/UserExistException.java
package com.example.demo.error;

public class UserExistException extends RuntimeException{
    public UserExistException(){
        super("User is existed");
    }
}
